fix image stretch

--- a/main.css
+++ b/main.css
@@ -734,6 +734,7 @@ div.section {
 .full.caseStudyImg {
 	width: 100%;
 	height: 100%;
+	background-size: cover;
 }
 
 .half.caseStudyImg {
